--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="author" content="Esteban Selvaggi" />
     <meta name="theme-color" content="#111" />
-    <link rel="shortcut icon" href="raiz/logo/v3/isotipo.svg" />
+    <link rel="shortcut icon" href="https://imgur.com/fGVu0XP" />
     <!-- Imagen Open Graph -->
     <meta property="og:image" content="..." />
     <meta property="og:image:type" content="image/png" />
