--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#111" />
     <link rel="shortcut icon" href="https://imgur.com/fGVu0XP" />
     <!-- Imagen Open Graph -->
-    <meta property="og:image" content="..." />
+    <meta property="og:image" content="https://imgur.com/fGVu0XP" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
