--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     />
     <meta name="author" content="Esteban Selvaggi" />
     <meta name="theme-color" content="#111" />
-    <link rel="shortcut icon" href="https://imgur.com/fGVu0XP" />
+    <link rel="shortcut icon" href="https://selvaggiesteban.github.io/ingenieriaproyectos/raiz/logo/v3/isotipo.svg" />
     <!-- Imagen Open Graph -->
-    <meta property="og:image" content="https://imgur.com/fGVu0XP" />
+    <meta property="og:image" content="https://selvaggiesteban.github.io/ingenieriaproyectos/raiz/logo/v3/isotipo.svg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
